layout fixes to user profile activities, toolbar
-christina nguyen

--- a/app/src/main/res/layout/activity_specific_game.xml
+++ b/app/src/main/res/layout/activity_specific_game.xml
@@ -218,7 +218,7 @@
                             android:id="@+id/winLoss"
                             style="@style/liquor_label"
                             android:text="@string/win_loss"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="15dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/hours" />
 
@@ -272,20 +272,18 @@
                             android:id="@+id/calculate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="5dp"
                             android:text="@string/calculate"
                             android:onClick="calculateBACClick"
-                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/winLoss" />
 
                         <TextView
                             android:id="@+id/your_bac_label"
                             style="@style/liquor_label"
-                            app:layout_constraintStart_toEndOf="@+id/calculate"
-                            app:layout_constraintTop_toTopOf="@id/calculate"
-                            app:layout_constraintBottom_toBottomOf="@id/calculate"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             android:text="@string/your_bac"
-                            android:layout_marginStart="20dp"
                             android:visibility="invisible"/>
 
                         <TextView
@@ -294,16 +292,16 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             app:layout_constraintStart_toEndOf="@+id/your_bac_label"
-                            app:layout_constraintTop_toTopOf="@+id/your_bac_label" />
+                            app:layout_constraintTop_toTopOf="@+id/your_bac_label"/>
 
                         <Button
                             android:id="@+id/saveGame"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:layout_marginTop="10dp"
-                            app:layout_constraintStart_toStartOf="parent"
+                            android:theme="@style/Buttons.whiteBlue"
                             app:layout_constraintTop_toBottomOf="@id/calculate"
-                            app:layout_constraintEnd_toEndOf="@id/calculate"
+                            app:layout_constraintEnd_toEndOf="parent"
                             android:text="@string/save_game"
                             android:onClick="saveNewGame"/>
 
