--- a/app/src/main/res/layout/activity_games_available.xml
+++ b/app/src/main/res/layout/activity_games_available.xml
@@ -15,9 +15,10 @@
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_margin="10dp"
+            style="@style/header_specific_game"
             android:text="@string/games_avail_header"
-            android:textSize="24sp"
+            android:textSize="22sp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
