--- a/app/src/main/res/layout/activity_user_bacinfo.xml
+++ b/app/src/main/res/layout/activity_user_bacinfo.xml
@@ -11,49 +11,87 @@
         android:id="@+id/toolbar" />
 
     <TextView
-        android:id="@+id/personalnfo"
-        android:layout_width="306dp"
-        android:layout_height="135dp"
+        android:id="@+id/personalInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:gravity="left"
-        android:theme="@style/TextAppearance.Pretty"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:gravity="center_vertical"
         android:text="@string/bac_calc_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <TextView
-        android:id="@+id/gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:theme="@style/TextAppearance.Pretty"
-        android:text="@string/gender"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personalnfo" />
 
-    <TextView
-        android:id="@+id/weight"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profile_constraint_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:theme="@style/TextAppearance.Pretty"
-        android:text="@string/weight"
+        app:layout_constraintTop_toBottomOf="@id/personalInfo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gender" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="30dp"
+        android:visibility="invisible">
 
-    <TextView
-        android:id="@+id/age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:theme="@style/TextAppearance.Pretty"
-        android:text="@string/age"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weight" />
+        <TextView
+            android:id="@+id/nickname"
+            style="@style/profile_info"
+            android:text="@string/nickname"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/gender"
+            style="@style/profile_info"
+            android:text="@string/gender"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nickname" />
+
+        <TextView
+            android:id="@+id/weight"
+            style="@style/profile_info"
+            android:text="@string/weight"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gender" />
+
+        <TextView
+            android:id="@+id/age"
+            style="@style/profile_info"
+            android:text="@string/age"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weight" />
+
+
+        <TextView
+            android:id="@+id/nicknameFireFilled"
+            style="@style/profile_info"
+            android:layout_marginStart="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
+        <TextView
+            android:id="@+id/genderFireFilled"
+            style="@style/profile_info"
+            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+            app:layout_constraintTop_toBottomOf="@+id/nicknameFireFilled"  />
+
+        <TextView
+            android:id="@+id/weightFireFilled"
+            style="@style/profile_info"
+            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+            app:layout_constraintTop_toBottomOf="@+id/genderFireFilled" />
+
+        <TextView
+            android:id="@+id/ageFireFilled"
+            style="@style/profile_info"
+            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+            app:layout_constraintTop_toBottomOf="@+id/weightFireFilled" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/updateInfo"
@@ -61,44 +99,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:theme="@style/Buttons.whiteBlue"
-        android:text="Update Information"
+        android:text="@string/update_profile_button"
         android:onClick="onUpdateUserProfileClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ageFireFilled" />
-
-    <TextView
-        android:id="@+id/genderFireFilled"
-        android:layout_width="137dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="40dp"
-        android:theme="@style/TextAppearance.Pretty"
-        android:text="@string/genderFireFilled"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/gender"
-        app:layout_constraintTop_toBottomOf="@+id/personalnfo" />
-
-    <TextView
-        android:id="@+id/weightFireFilled"
-        android:layout_width="137dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="20dp"
-        android:theme="@style/TextAppearance.Pretty"
-        android:text="@string/weightFireFilled"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/weight"
-        app:layout_constraintTop_toBottomOf="@+id/genderFireFilled" />
-
-    <TextView
-        android:id="@+id/ageFireFilled"
-        android:layout_width="137dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/ageFireFilled"
-        android:theme="@style/TextAppearance.Pretty"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/age"
-        app:layout_constraintTop_toBottomOf="@+id/weightFireFilled" />
+        app:layout_constraintTop_toBottomOf="@id/profile_constraint_layout"
+        tools:ignore="UsingOnClickInXml" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
