--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,12 +19,25 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="profile_info">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+    <style name="user_profile">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:textSize">18dp</item>
+    </style>
+
     <style name="liquor_input_style">
         <item name="android:layout_width">60dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
         <item name="android:inputType">number</item>
-        <item name="android:hint">0</item>
+        <item name="android:hint">-</item>
     </style>
     <style name="liquor_label">
         <item name="android:layout_width">wrap_content</item>
