--- a/app/src/main/res/layout/activity_user_bacinfo.xml
+++ b/app/src/main/res/layout/activity_user_bacinfo.xml
@@ -1,110 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".userBACInfo">
 
-    <include
-        layout="@layout/toolbar_main"
-        android:id="@+id/toolbar" />
-
-    <TextView
-        android:id="@+id/personalInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:gravity="center_vertical"
-        android:text="@string/bac_calc_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/profile_constraint_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/personalInfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="30dp"
-        android:visibility="invisible">
+        android:layout_height="wrap_content">
+
+        <include
+            layout="@layout/toolbar_main"
+            android:id="@+id/toolbar" />
 
         <TextView
-            android:id="@+id/nickname"
-            style="@style/profile_info"
-            android:text="@string/nickname"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/gender"
-            style="@style/profile_info"
-            android:text="@string/gender"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nickname" />
-
-        <TextView
-            android:id="@+id/weight"
-            style="@style/profile_info"
-            android:text="@string/weight"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gender" />
-
-        <TextView
-            android:id="@+id/age"
-            style="@style/profile_info"
-            android:text="@string/age"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weight" />
-
-
-        <TextView
-            android:id="@+id/nicknameFireFilled"
-            style="@style/profile_info"
-            android:layout_marginStart="30dp"
+            android:id="@+id/personalInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:gravity="center_vertical"
+            android:text="@string/bac_calc_info"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/profile_constraint_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/personalInfo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginTop="30dp"
+            android:visibility="invisible">
+
+            <TextView
+                android:id="@+id/nickname"
+                style="@style/profile_info"
+                android:text="@string/nickname"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/gender"
+                style="@style/profile_info"
+                android:text="@string/gender"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nickname" />
+
+            <TextView
+                android:id="@+id/weight"
+                style="@style/profile_info"
+                android:text="@string/weight"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gender" />
+
+            <TextView
+                android:id="@+id/age"
+                style="@style/profile_info"
+                android:text="@string/age"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/weight" />
+
+
+            <TextView
+                android:id="@+id/nicknameFireFilled"
+                style="@style/profile_info"
+                android:layout_marginStart="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
+            <TextView
+                android:id="@+id/genderFireFilled"
+                style="@style/profile_info"
+                app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+                app:layout_constraintTop_toBottomOf="@+id/nicknameFireFilled"  />
+
+            <TextView
+                android:id="@+id/weightFireFilled"
+                style="@style/profile_info"
+                app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+                app:layout_constraintTop_toBottomOf="@+id/genderFireFilled" />
+
+            <TextView
+                android:id="@+id/ageFireFilled"
+                style="@style/profile_info"
+                app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
+                app:layout_constraintTop_toBottomOf="@+id/weightFireFilled" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/updateInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:theme="@style/Buttons.whiteBlue"
+            android:text="@string/update_profile_button"
+            android:onClick="onUpdateUserProfileClick"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_constraint_layout"
+            tools:ignore="UsingOnClickInXml" />
 
         <TextView
-            android:id="@+id/genderFireFilled"
-            style="@style/profile_info"
-            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
-            app:layout_constraintTop_toBottomOf="@+id/nicknameFireFilled"  />
+            android:id="@+id/my_games"
+            style="@style/header_specific_game"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/my_games"
+            app:layout_constraintTop_toBottomOf="@+id/updateInfo"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"/>
 
-        <TextView
-            android:id="@+id/weightFireFilled"
-            style="@style/profile_info"
-            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
-            app:layout_constraintTop_toBottomOf="@+id/genderFireFilled" />
-
-        <TextView
-            android:id="@+id/ageFireFilled"
-            style="@style/profile_info"
-            app:layout_constraintEnd_toEndOf="@+id/nicknameFireFilled"
-            app:layout_constraintTop_toBottomOf="@+id/weightFireFilled" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_games_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintTop_toBottomOf="@id/my_games"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"
+            android:paddingBottom="20dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/updateInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:theme="@style/Buttons.whiteBlue"
-        android:text="@string/update_profile_button"
-        android:onClick="onUpdateUserProfileClick"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_constraint_layout"
-        tools:ignore="UsingOnClickInXml" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
